# bevy-android-ui-flicker

./: .gitignore  Cargo.toml  README.md  justfile
assets/shaders/: post_processing.wgsl
src/: camera.rs  lib.rs
src/menus/: home.rs  mod.rs
src/post_process/: mod.rs  vfx.rs
